# nomad-task-manager

./: README.md  project_structure.md  project_structure.txt  pyproject.toml
src/: main.py
src/config/: database.py
src/config/migration/: env.py
src/frontend/static/css/: style.css
src/frontend/static/js/: app.js
src/frontend/templates/: index.html
src/users/: models.py  routers.py  schemas.py
