[tool.poetry]
name = "nomad-task-manager"
version = "0.1.0"
description = "27.02.2025"
authors = ["ExtroEd <ExtroEd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.75.0"
sqlalchemy = ">=2.0.38,<3.0.0"
alembic = ">=1.14.1,<2.0.0"
psycopg2 = ">=2.9.10,<3.0.0"
pydantic = "^1.8.2"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
jinja2 = "^3.1.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
